# tuya-open-sdk-for-device-board

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  README_zh.md  board_config.cmake  board_prepare.sh  build_example.sh  default.config  default_esp32.config  threading_alt.h  toolchain_esp32.cmake  toolchain_esp32c3.cmake  toolchain_esp32c6.cmake  toolchain_esp32s2.cmake  toolchain_esp32s3.cmake  toolchain_file.cmake
beken_os/: Makefile  application.mk
beken_os/beken378/app/: app.h  app_bk.c
beken_os/beken378/app/config/: param_config.h  sys_config.h
beken_os/beken378/driver/entry/: arch_main.c
beken_os/beken378/driver/i2c/: i2c1.c  i2c2.c  i2c_pub.h
beken_os/beken378/driver/include/: pwm_pub.h
beken_os/beken378/driver/phy/: phy_trident.c
beken_os/beken378/driver/pwm/: pwm_new.c  pwm_new.h
beken_os/beken378/driver/spi/: spi_master_bk7231n.c
beken_os/beken378/driver/sys_ctrl/: sys_ctrl.c
beken_os/beken378/driver/uart/: uart_bk.c
beken_os/beken378/driver/wdt/: wdt.c
beken_os/beken378/func/bk7011_cal/: bk7231N_cal.c  manual_cal_bk7231U.c
beken_os/beken378/func/hostapd-2.5/hostapd/: main_none.c  main_none.h
beken_os/beken378/func/hostapd-2.5/wpa_supplicant/: config_none.c  events.c  main_supplicant.c  wpa_scan.c  wpa_supplicant.c
beken_os/beken378/func/hostapd_intf/: hostapd_intf.c
beken_os/beken378/func/include/: rw_pub.h  wlan_ui_pub.h
beken_os/beken378/func/misc/: start_type.c
beken_os/beken378/func/power_save/: power_save.c
beken_os/beken378/func/rwnx_intf/: rw_msg_rx.c  rw_msg_rx.h
beken_os/beken378/func/uart_debug/: command_line.c
beken_os/beken378/func/user_driver/: BkDriverPwm.c  BkDriverPwm.h  BkDriverUart.h
beken_os/beken378/func/wlan_ui/: wlan_cli.c  wlan_ui.c
beken_os/beken378/ip/lmac/src/mm/: mm.h
beken_os/beken378/ip/mac/: mac_common.h
beken_os/beken378/os/FreeRTOSv9.0.0/: rtos_pub.c
beken_os/beken378/os/include/: rtos_pub.h
beken_os/tools/: addr2line.py
beken_os/tools/generate/: combine.sh  mpytools.py
toolchain/: build_path  platform.mk
tools/tyutool/: README.md  README_CN.md
tuya-open-sdk/: CMakeLists.txt  main.c
tuya-open-sdk/tuyaos_adapter/: CMakeLists.txt
tuya-open-sdk/tuyaos_adapter/include/init/include/: tkl_init_wifi.h
tuya-open-sdk/tuyaos_adapter/include/utilities/src/: tuya_list.c  tuya_mem_heap.c
tuya-open-sdk/tuyaos_adapter/src/drivers/: tkl_flash.c  tkl_gpio.c1  tkl_lwip.c  tkl_uart.c  tkl_watchdog.c  tkl_wifi.c
tuya-open-sdk/tuyaos_adapter/src/system/: tkl_memory.c  tkl_mutex.c  tkl_ota.c  tkl_output.c  tkl_queue.c  tkl_semaphore.c  tkl_sleep.c  tkl_system.c  tkl_thread.c
tuya_open_sdk/: CMakeLists.txt  partitions.csv  sdkconfig_esp32  sdkconfig_esp32c2  sdkconfig_esp32c6  sdkconfig_esp32s2
tuya_open_sdk/main/: main.c  threading_alt.h
tuya_open_sdk/tuyaos_adapter/: CMakeLists.txt
tuya_open_sdk/tuyaos_adapter/include/pinmux/: tkl_pinmux.h
tuya_open_sdk/tuyaos_adapter/include/system/: tkl_ota.h
tuya_open_sdk/tuyaos_adapter/src/drivers/: tkl_bt.c  tkl_flash.c  tkl_pin.c  tkl_rtc.c  tkl_timer.c  tkl_watchdog.c
tuya_open_sdk/tuyaos_adapter/src/system/: tkl_output.c  tkl_semaphore.c  tkl_sleep.c  tkl_thread.c
tuyaos/: CMakeLists.txt  build.sh  build_path  platform.mk  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.old  sdkconfig_esp32c3  sdkconfig_esp32s3  tuyaos_kernel.config
tuyaos/main/: CMakeLists.txt  main.c
tuyaos/tuyaos_adapter/: CMakeLists.txt  local.mk
tuyaos/tuyaos_adapter/include/bluetooth/: tkl_bluetooth.h  tkl_bluetooth_def.h
tuyaos/tuyaos_adapter/include/init/include/: tkl_init_common.h  tkl_init_system.h
tuyaos/tuyaos_adapter/include/init/src/: tkl_init_common.c  tkl_init_system.c
tuyaos/tuyaos_adapter/include/network/: tkl_network.h
tuyaos/tuyaos_adapter/include/spi/: tkl_spi.h
tuyaos/tuyaos_adapter/include/system/: tkl_memory.h  tkl_mutex.h  tkl_semaphore.h  tkl_thread.h
tuyaos/tuyaos_adapter/include/timer/: tkl_timer.h
tuyaos/tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h  tuya_mem_heap.h
tuyaos/tuyaos_adapter/include/utilities/src/: tuya_queue.c
tuyaos/tuyaos_adapter/include/wifi/: tkl_wifi.h
tuyaos/tuyaos_adapter/src/: net.c  tkl_adc.c  tkl_flash.c  tkl_gpio.c  tkl_hci.c  tkl_lwip.c  tkl_memory.c  tkl_mutex.c  tkl_ota.c  tkl_output.c  tkl_pinmux.c  tkl_pwm.c  tkl_queue.c  tkl_rtc.c  tkl_semaphore.c  tkl_sleep.c  tkl_spi.c  tkl_system.c  tkl_thread.c  tkl_timer.c  tkl_uart.c  tkl_watchdog.c  tkl_wifi.c
tuyaos/tuyaos_adapter/src/drivers/: tkl_adc.c  tkl_network.c  tkl_ota.c  tkl_pin.c  tkl_pwm.c  tkl_uart.c  tkl_watchdog.c  tkl_wifi.c
tuyaos/tuyaos_adapter/src/system/: tkl_memory.c  tkl_mutex.c  tkl_output.c  tkl_queue.c  tkl_semaphore.c  tkl_system.c  tkl_thread.c
tuyaos_adapter/: Makefile  build.sh  build_path  local.mk  platform.mk
tuyaos_adapter/include/bluetooth/: tkl_bluetooth_bredr.h  tkl_bluetooth_mesh_def.h  tkl_bluetooth_mesh_prov.h
tuyaos_adapter/include/init/include/: tkl_init_network.h  tkl_init_system.h
tuyaos_adapter/include/init/src/: tkl_init_network.c  tkl_init_wifi.c  tkl_init_wired.c
tuyaos_adapter/include/network/: tkl_network.h
tuyaos_adapter/include/pwm/: tkl_pwm.h
tuyaos_adapter/include/system/: tkl_system.h
tuyaos_adapter/include/utilities/src/: tuya_hashmap.c  tuya_ringbuf.c  tuya_smartpointer.c  tuya_tools.c
tuyaos_adapter/include/wifi/: tkl_wifi.h
tuyaos_adapter/src/: tkl_flash.c  tkl_memory.c  tkl_mutex.c  tkl_ota.c  tkl_queue.c  tkl_rtc.c  tkl_semaphore.c  tkl_system.c  tkl_thread.c  tkl_uart.c  tkl_wired.c
tuyaos_adapter/src/tkl_bt/: tkl_bt.c
tuyaos_adapter/src/tkl_bt/include/: bluetooth_api.h  hci.h  hci_lib.h
tuyaos_adapter/src/tkl_bt/src/: gatt.c  hci.c
tuyaos_adapter/src/tkl_wifi/: linux_wifi.c  linux_wifi.h  tkl_wifi.c
tuyaos_adapter/src/tkl_wifi/iwlib/: iwlib-private.h  iwlib.c  iwlib.h  wireless.h
tuyaos_adapter/src/tkl_wifi/log/: tkl_wifi_log.h
tuyaos_adapter/src/tkl_wifi/wpa_cli/: build_config.h  list.h  os_unix.c  wpa_cli.c  wpa_ctrl.c
tuyaos_adapter/src/tkl_wifi/wpa_s/: wpa_cli_wrapper.c  wpa_command.c  wpa_command.h
(+45 files in other folders)
